--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -112,8 +112,8 @@ section {
 
   #header-img {
     position: absolute;
-    clip-path: polygon(40% 0%, 100% 100%, 100% 0, 0 0);
-    background-color: transparentize($p2pu-yellow, 0.5);
+    clip-path: polygon(60% 0%, 100% 100%, 100% 0, 0 0);
+    background-color: #AE1B19;
 
     &, img {
       width: 100%;
@@ -150,6 +150,10 @@ section {
         color: $gray-darker;
         padding-right: calc(8.35% + 30px);
         box-shadow: -2px 2px 6px 1px rgba(0, 0, 0, 0.1);
+        min-height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         h2 {
           font-family: $font-family-sans-serif;
